IRtest_out/96_matrix_add.err
irs/96_matrix_add.ll:55:18: error: invalid operand type for instruction
  %v69 = add nsw float %v61, %v68
                 ^
1 error generated.
